# schunk_robots

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/schunk_lwa4p/share/schunk_lwa4p/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/schunk_lwa4p/share/schunk_lwa4p/cmake/: schunk_lwa4pConfig.cmake
install/schunk_lwa4p/share/schunk_lwa4p/launch/: view_robot.launch.py
log/: latest_build
schunk_description/: CMakeLists.txt
schunk_description/urdf/lwa4p/: lwa4p.ros2_control.xacro  lwa4p_macro.urdf.xacro
schunk_lwa4p/: CMakeLists.txt  package.xml
schunk_lwa4p/config/: schunk_lwa4p.rviz  schunk_lwa4p_controllers.yaml  schunk_lwa4p_joint_trajectory_publisher.yaml
schunk_lwa4p/config/schunk_lwa4p/: bus.yaml
schunk_lwa4p/config/schunk_lwa4p_lifecycle/: Schunk_0_63.dcf  bus.yaml
schunk_lwa4p/install/: local_setup.sh  setup.sh
schunk_lwa4p/install/schunk_lwa4p/share/schunk_lwa4p/: local_setup.sh  package.ps1  package.sh
schunk_lwa4p/install/schunk_lwa4p/share/schunk_lwa4p/launch/: view_robot.launch.py
schunk_lwa4p/install/schunk_lwa4p/share/schunk_lwa4p/launch/install/: local_setup.sh  setup.sh
schunk_lwa4p/install/schunk_lwa4p/share/schunk_lwa4p/launch/log/: latest_build
schunk_lwa4p/launch/: control.launch.py  fake_can_slaves.launch.py  schunk_lwa4p_control.launch.py  test_joint_trajectory_controller.launch.py  view_robot.launch.py
schunk_lwa4p/log/: latest_build
schunk_lwa4p/urdf/: robot.urdf.xacro  schunk_lwa4p.urdf.xacro
(+2 files in other folders)
